// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> should call the onMount function if given one 1`] = `
<div
  className="ToastClass alert"
>
  <IntelliIcon
    className="toast-icon"
    size="xsmall"
    type="alert"
  />
  <div
    className="toast-content no-heading"
  >
    <Text
      isInline={true}
      tag="span"
      type="body"
      weight="heavy"
    />
    <div>
      Yahallo!
    </div>
  </div>
  <span
    className="fa-container toast-close-span"
    onClick={[Function]}
  >
    <IntelliIcon
      className="toast-close"
      size="xsmall"
      type="cross-small"
    />
  </span>
</div>
`;

exports[`<Toast /> should render a toast of a default type, which is success 1`] = `
<div
  className="ToastClass success"
>
  <IntelliIcon
    className="toast-icon"
    size="xsmall"
    type="check"
  />
  <div
    className="toast-content no-heading"
  >
    <Text
      isInline={true}
      tag="span"
      type="body"
      weight="heavy"
    />
    <div>
      Yo ... whaazzzaaaap!!!
    </div>
  </div>
  <span
    className="fa-container toast-close-span"
    onClick={[Function]}
  >
    <IntelliIcon
      className="toast-close"
      size="xsmall"
      type="cross-small"
    />
  </span>
</div>
`;

exports[`<Toast /> should render an alert toast 1`] = `
<div
  className="ToastClass alert"
>
  <IntelliIcon
    className="toast-icon"
    size="xsmall"
    type="alert"
  />
  <div
    className="toast-content no-heading"
  >
    <Text
      isInline={true}
      tag="span"
      type="body"
      weight="heavy"
    />
    <div>
      Surprise @#$%^&*!!!
    </div>
  </div>
  <span
    className="fa-container toast-close-span"
    onClick={[Function]}
  >
    <IntelliIcon
      className="toast-close"
      size="xsmall"
      type="cross-small"
    />
  </span>
</div>
`;
